--- a/app/assets/stylesheets/search/search.scss
+++ b/app/assets/stylesheets/search/search.scss
@@ -1,6 +1,3 @@
-.search-form-container {
-  width: 100%;
-}
 
 .search-form-container {
     border: 1px solid #fff;
@@ -11,6 +8,7 @@
     background: #fff;
     border-radius: 5px;
     box-shadow: 0px 2px 6px 0px #ccc;
+    min-width: 580px;
 }
 
 .search-form-container h3 {
