Adjust the loading time

--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -167,11 +167,11 @@
 }
 
 ///back to top button in app.jsx
-#myBtn {
-    // display: none; /* Hidden by default */
-    position: absolute;; /* Fixed/sticky position */
-    // bottom: 0px; /* Place the button at the bottom of the page */
-    right: 0; /* Place the button 30px from the right */
+#backToTop {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 10px; /* Place the button at the bottom of the page */
+    right: 10%; /* Place the button 30px from the right */
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
     outline: none; /* Remove outline */
@@ -183,7 +183,7 @@
     font-size: 12px; /* Increase font size */
 }
 
-#myBtn:hover {
+#backToTop:hover {
     background-color: #555; /* Add a dark-grey background on hover */
 }
 
