--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,2 +1,53 @@
 
 <main id="root"></main>
+
+<script>
+  // window.onscroll = function() {
+  //   if(document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+  //     if(document.getElementById("backToTop")){
+  //       console.log(document.getElementById("backToTop").style.top)
+  //       document.getElementById("backToTop").style.display = "block";
+  //     }
+  //   } else {
+  //     if(document.getElementById("backToTop")){
+  //      document.getElementById("backToTop").style.display = "none";
+  //     }
+  //   }
+  // }
+
+  // $('#backToTop').hide();
+  // $(window).scroll(function(){
+  //
+  //   var stop = $('#footer').position().top - $(window).scrollTop();
+  //   var footer = $('#footer').position().top
+  //   console.log(`footer: ${footer}`)
+  //   console.log(`stop: ${stop}`)
+  //
+  //   var bottomOfButton = $('#backToTop').position().top + 120;
+  //   console.log(`bottomOfButton: ${bottomOfButton}`);
+  //   var bottom = stop - $('#backToTop').height() + 'px';
+  //   console.log(`bottom: ${bottom}`);
+  //
+  //   if ($(window).scrollTop() > 300 ){
+  //     $('#backToTop').fadeIn();
+  //   } else {
+  //     $('#backToTop').fadeOut();
+  //   };
+  //
+  //   // if (stop < bottomofbutton){
+  //   //     $('#backToTop').css('bottom', 0);
+  //   // } else if (stop >= bottomofbutton){
+  //   //     $('#backToTop').css({'bottom': '170px', 'top': ''});
+  //   // }
+  //   if (stop <= bottomOfButton + 40){
+  //       $('#backToTop').css('top', bottom);
+  //   } else if (stop >= bottomOfButton){
+  //       $('#backToTop').css({'bottom': '10px', 'top': ''});
+  //   }
+  //   // if (bottomOfButton >= stop){
+  //   //     $('#backToTop').css('top', bottom);
+  //   // } else {
+  //   //     $('#backToTop').css({'bottom': '10px', 'top': ''});
+  //   // }
+  // });
+</script>
