--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -15,30 +15,27 @@
   //   }
   // }
 
-  // $('#backToTop').hide();
-  // $(window).scroll(function(){
-  //
-  //   var stop = $('#footer').position().top - $(window).scrollTop();
-  //   var footer = $('#footer').position().top
-  //   console.log(`footer: ${footer}`)
-  //   console.log(`stop: ${stop}`)
-  //
-  //   var bottomOfButton = $('#backToTop').position().top + 120;
-  //   console.log(`bottomOfButton: ${bottomOfButton}`);
-  //   var bottom = stop - $('#backToTop').height() + 'px';
-  //   console.log(`bottom: ${bottom}`);
-  //
-  //   if ($(window).scrollTop() > 300 ){
-  //     $('#backToTop').fadeIn();
-  //   } else {
-  //     $('#backToTop').fadeOut();
-  //   };
-  //
-  //   // if (stop < bottomofbutton){
-  //   //     $('#backToTop').css('bottom', 0);
-  //   // } else if (stop >= bottomofbutton){
-  //   //     $('#backToTop').css({'bottom': '170px', 'top': ''});
-  //   // }
+  $('#backToTop').hide();
+  $(window).scroll(function(){
 
-  // });
+    var stop = $('#footer').position().top - $(window).scrollTop();
+    var footer = $('#footer').position().top
+
+    var bottomOfButton = $('#backToTop').position().top + 100;
+    var bottom = stop - $('#backToTop').height() + 'px';
+
+
+    if ($(window).scrollTop() > 400 ){
+      $('#backToTop').fadeIn();
+    } else {
+      $('#backToTop').fadeOut();
+    };
+
+    // if (stop < bottomofbutton){
+    //     $('#backToTop').css('bottom', 0);
+    // } else if (stop >= bottomofbutton){
+    //     $('#backToTop').css({'bottom': '170px', 'top': ''});
+    // }
+
+  });
 </script>
