--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -165,7 +165,7 @@
 
 ///back to top button in app.jsx
 #backToTop {
-    // display: none; /* Hidden by default */
+    display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
     bottom: 170px; /* Place the button at the bottom of the page */
     right: 11%; /* Place the button 30px from the right */
