Change the loading icon

--- a/app/assets/stylesheets/loading/loading.scss
+++ b/app/assets/stylesheets/loading/loading.scss
@@ -21,7 +21,7 @@
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  background: #000;
+  background: #fff;
   margin: -3px 0 0 -3px;
 }
 .lds-roller div:nth-child(1) {
