--- a/app/assets/stylesheets/restaurants/restaurants_list.scss
+++ b/app/assets/stylesheets/restaurants/restaurants_list.scss
@@ -1,3 +1,9 @@
+// .restaurantList-container {
+//   border: 1px solid blue;
+//   display: flex;
+// }
+
+
 .restaurant-list {
   // position: relative;
   // display: block;
@@ -10,6 +16,7 @@
   background-color: #f7f7f7;
   padding: 20px;
   min-width: 540px;
+  // border: 1px solid red;
 }
 
 .restaurantList-img-container {
