Edit front page

--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -16,7 +16,8 @@ header, main {
   background: #fff;
 }
 #root {
-  max-width: 1600px;
+  // width: 100%;
+  // max-width: 1600px;
   margin: 0 auto;
 }
 
