--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -16,8 +16,8 @@ header, main {
   background: #fff;
 }
 #root {
-  // width: 100%;
-  // max-width: 1600px;
+  // width: 80%;
+  max-width: 2000px;
   margin: 0 auto;
 }
 
