Edit slide show width

--- a/app/assets/stylesheets/slide/slide.scss
+++ b/app/assets/stylesheets/slide/slide.scss
@@ -7,12 +7,12 @@
 }
 
 .slider {
- height: 230px;
+ height: 240px;
  width: 100%;
  outline: none;
  color: #fff;
  text-align: center;
- font-size: 18px;
+ font-size: 19px;
  font-weight: bold;
  text-shadow: 1px 1px 1px #000;
  background-color: rgba(255, 255, 255, 0.6);
@@ -29,32 +29,32 @@
 }
 .slider.one {
  background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523595721/cuisine_italian.jpg");
- background-size: 260px 230px;
+ background-size: 98% 240px;
  background-position: center;
  background-repeat: no-repeat;
 }
 .slider.two {
  background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523595638/cuisine_seafood.jpg");
- background-size: 260px 230px;
+ background-size: 98% 240px;
  background-position: center;
  background-repeat: no-repeat;
 }
 .slider.three {
  background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523595575/cuisine_american.jpg");
- background-size: 260px 230px;
+ background-size: 98% 240px;
  background-position: center;
  background-repeat: no-repeat;
 }
 .slider.four {
  background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523595993/cuisine_japanese.jpg");
- background-size: 260px 230px;
+ background-size: 98% 240px;
  background-position: center;
  background-repeat: no-repeat;
 }
 
 .slider.five {
  background-image: url("https://res.cloudinary.com/chengzii/image/upload/v1523595675/cuisine_french.jpg");
- background-size: 250px 230px;
+ background-size: 98% 240px;
  background-position: center;
  background-repeat: no-repeat;
 }
