--- a/app/assets/stylesheets/user/user_show.scss
+++ b/app/assets/stylesheets/user/user_show.scss
@@ -81,11 +81,23 @@
   bottom: 20px;
 }
 
+.reservation-delete-btn {
+  display: block;
+  color: #237b98;
+  position: relative;
+  left: 2px;
+  top: 5px;
+}
+
 .review-btn {
-  padding: 2px 12px;
+  padding: 2px 10px 2px 12px;
   display: inline-block;
   line-height: 34px;
+  position: absolute;
+  right: 0;
+  bottom: 20px;
 }
+
 
 .no-reservation {
   padding: 10px 0 10px 24px;
