Update user icon

--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -159,6 +159,9 @@
   display: inline;
   line-height: 24px;
 }
+.footer-links a i.user-icon {
+  font-size: 15px;
+}
 
 ///back to top button in app.jsx
 #backToTop {
