Update user profile

--- a/app/assets/stylesheets/user/user_show.scss
+++ b/app/assets/stylesheets/user/user_show.scss
@@ -74,6 +74,10 @@
   padding: 4px 0;
 }
 
+.restaurant-detail-container div i {
+  padding-right: 2px;
+}
+
 .reservation-btn{
   display: block;
   position: absolute;
