Update user's reservation list

--- a/app/assets/stylesheets/restaurants/restaurants_list.scss
+++ b/app/assets/stylesheets/restaurants/restaurants_list.scss
@@ -90,6 +90,10 @@
   color: #E5656E;
 }
 
+.restaurant-detail-container .upcoming-res-address {
+  color: #707070;
+}
+
 @media (max-width: 900px) {
   .restaurant-detail-ul {
     margin-left: 0px;
